NBNP-18 Organize CSS, custom current title bullet, fix template label

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -144,7 +144,7 @@
 
     {% if content.field_supplemental_information|field_value or family %}
     <dl class="title-history">
-        <dt>{{ content.field_supplemental_information|field_label }}:</dt>
+        <dt>{% trans %}Broad title history{% endtrans %}:</dt>
         <dd class="no-borders">({% trans %}This field includes titles and publication dates of UNB Holdings only{%  endtrans %})<br >
             {{ content.field_supplemental_information|field_value }}</dd>
             {% if family %}
