--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -144,12 +144,19 @@
 
     {% if content.field_supplemental_information|field_value or family %}
     <dl class="title-history">
-        <dt>{% trans %}Broad title history{% endtrans %}:</dt>
+        <dt>{% trans %}Broad Title History{% endtrans %}:</dt>
         <dd class="no-borders">({% trans %}This field includes titles and publication dates of UNB Holdings only{%  endtrans %})<br >
-            {{ content.field_supplemental_information|field_value }}</dd>
+            {{ content.field_supplemental_information|field_value }}
             {% if family %}
                 {{ family }}
             {% endif %}
+        </dd>
+        {% if supplemental_title %}
+            <dt>{{ supplemental_title_label }}:</dt>
+            <dd>
+                {{ supplemental_title }}
+            </dd>
+        {% endif %}
     </dl>
     {% endif %}
 
