--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -115,6 +115,17 @@
         <dd>{{ publication_date_value }}</dd>
     </dl>
 
+
+    {% if content.field_title_notes|field_value %}
+        <dl>
+            <dt>{{ content.field_title_notes|field_label }}:</dt>
+            <dd>{{ content.field_title_notes|field_value }}</dd>
+        </dl>
+    {% endif %}
+
+
+    <hr />
+
     {% if earlier_titles_up %}
         {% set count = content.field_serial_relation_pre_ref_up|field_value|length %}
         <dl>
