NBNP-18 WIP Holdings fieldset in display template

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -69,7 +69,7 @@
  */
 #}
 <main {{ attributes.addClass('no-gutters') }}>
-<section class="col-sm-8">
+<section class="publication col-sm-8">
     {{ title_prefix }}
     {% if not page %}
         <h2{{ title_attributes }}>
@@ -212,6 +212,29 @@
             {% endif %}
         </dl>
     {% endif %}
+
+   <fieldset>
+       <legend>Holdings: </legend>
+    {% if holding.microfilm|length > 0 %}
+        <div role="tablist" aria-multiselectable="true">
+            <div class="panel-title" role="tab" id="headingMicrofilm">
+                <a role="button" data-toggle="collapse" href="#collapseMicrofilm" aria-expanded="false" aria-controls="collapseMicrofilm" class="collapsed">
+                    {% trans %}Microforms{% endtrans %}
+                </a>
+            </div>
+            <div id="collapseMicrofilm" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingMicrofilm">
+                <div class="panel-body">
+                    {% for item in holding.microfilm %}
+                        <dl>
+                            <dt>{{ item.label }}:</dt>
+                            <dd>{{ item.value }}</dd>
+                        </dl>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
+   </fieldset>
 
     {% if language_value %}
         <dl>
