NBNP-18 Holding section: Adjust whitespace

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -150,6 +150,7 @@ li.search-field:before {
 .publication legend {
   font-size: inherit;
   font-weight: bold;
+  margin-bottom: .5em;
 }
 .publication .panel-title a {
   display: block;
