NBNP-48 Definition list table layout WIP

--- a/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital-serial-issue.html.twig
@@ -10,7 +10,7 @@
     </header>
 
     <section class="digital-serial-page-meta col-sm-8">
-        <dl>
+        <dl class="clearfix">
             {% for label,value in metadata %}
                 <dt>{{ label }}</dt>
                 <dd>{{ value }}</dd>
