NBNP-45 Consistent whitespace between facet blocks w/ 'Show more'

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -232,6 +232,9 @@ ul.js-facets-checkbox-links + a.open::after {
   color: $link-color-hover;
   text-decoration: underline;
 }
+.facets-widget-checkbox {
+  margin-bottom: 1em;
+}
 
 // Elements.
 dd {
