NBNP-45 Expand clickable area: click-sort headings + result titles

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -450,6 +450,9 @@ a.btn-add::before {
 }
 
 /* Search results */
+.search-results table a {
+  display: block;
+}
 .search-results .glyphicon {
   font-size: smaller;
   margin-right: .1em;
