NBNP-45 Override Search API Autocomplete style

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -470,4 +470,7 @@ a.btn-add::before {
 .views-field-search-api-excerpt strong {
   color: #000;
 }
-
+/* Override Search API Autocomplete */
+.search-api-autocomplete-search .ui-menu-item:hover {
+  background: inherit;
+}
