NBNP-50 Add word highlighter on serial pages

--- a/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
+++ b/custom/modules/digital_serial/modules/digital_serial_page/css/digital_serial_page.openseadragon_viewer.css
@@ -5,3 +5,8 @@
 #digital-serial-page-page-viewer-form > pre {
   background-color: #f6f6f2;
 }
+
+.digital-serial-page-highlight {
+  background-color: #f00;
+  opacity: 0.5;
+}
