--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -484,3 +484,53 @@ a.btn-add::before {
   margin-right: 0.25em;
   vertical-align: text-bottom;
 }
+
+/* Exposed search block on front page */
+.path-frontpage .page-header {
+  display: none;
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page {
+  background: url(../img/newspapers-and-glasses.png) 100% 100%;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9); /* Black with a little bit see-through */
+  min-height: 500px;
+  text-align: center;
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page form {
+  height: 40%;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 30%;
+  background-color: rgb(0, 0, 8);
+  background-color: rgba(0, 0, 8, 0.85);
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page form .form-inline {
+  position: relative;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  display: block;
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page form .control-label {
+  visibility: hidden;
+  width: 0;
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page form .control-label:after {
+  content: 'New Brunswick Newspapers';
+  font-family: cursive;
+  font-size: 2.2em;
+  color: #fff;
+  display: block;
+  position: absolute;
+  top: -1.7em;
+  left: 0;
+  width: 100%;
+  visibility: visible;
+}
+.path-frontpage section.block-views-exposed-filter-blocksearch-search-page form label::after {
+  content: "";
+  clear: both;
+  display: table;
+}
