NBNP-100 Do not show all pages on empty search

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -461,6 +461,10 @@ a.btn-add::before {
 .search-results .views-row {
   margin-bottom: 1.5em;
 }
+/* Empty search no-results text hack */
+.search-results .results- {
+  display: none;
+}
 .search-results h3 {
   margin-bottom: 0;
 }
