NBNP-85 Change holdings legend text

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -223,7 +223,7 @@
 
     {% if holding.microfilm|length > 0 %}
     <fieldset>
-       <legend>Holdings: </legend>
+       <legend>{% trans %}UNB Libraries' Holdings{% endtrans %}:</legend>
         {% if holding.microfilm|length > 0 %}
             <div role="tablist" aria-multiselectable="true">
                 <div class="panel-title" role="tab" id="headingMicrofilm">
