NBNP-87 Add placeholder image to title publication

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -265,8 +265,8 @@
     {% endif %}
 </section>
 
-{% if content.field_sample_image|field_value %}
 <aside class="col-sm-4">
+{% if content.field_sample_image|field_value %}
     {% if content.field_sample_image|field_value %}
         <figure>
             {{ content.field_sample_image }}
@@ -280,7 +280,10 @@
     {% if content.field_description|field_value %}
         {{ content.field_description|field_value }}
     {% endif %}
-
-</aside>
+{% else %}
+    <figure>
+        <img class="no-borders" src="/{{ active_theme_path() }}/src/img/sample-publication.jpg" alt="" />
+    </figure>
 {% endif %}
+</aside>
 </main>
