--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -167,16 +167,16 @@
         </dl>
     {% endif %}
 
-
-    {% if content.field_supplemental_information|field_value or family %}
+    {% if family %}
     <hr />
     <dl class="title-history">
         <dt>{% trans %}Broad Title History{% endtrans %}:</dt>
         <dd class="no-borders">({% trans %}This field includes titles and publication dates of UNB Holdings only{%  endtrans %})<br >
-            {{ content.field_supplemental_information|field_value }}
-            {% if family %}
-                {{ family }}
+            {% set supplemental_tid = node.field_family.target_id %}
+            {% if supplemental_tid %}
+                {{ drupal_field('field_supplemental_information', 'taxonomy_term', supplemental_tid) }}
             {% endif %}
+            {{ family }}
         </dd>
         {% if supplemental_title %}
             <dt>{{ supplemental_title_label }}:</dt>
