--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -15,9 +15,9 @@ figcaption .glyphicon {
   margin-right: .25em;
   top: 3px;
 }
-a:hover,
-a:active,
-a:focus {
+a:not(.btn):hover,
+a:not(.btn):active,
+a:not(.btn):focus {
   border-style: none;
   text-decoration: underline;
 }
@@ -307,6 +307,9 @@ p {
 }
 
 /* Fix overrides.min.css / unb-lib.css conflict */
+a.disabled {
+  color: $text-muted;
+}
 .breadcrumb li:first-of-type a {
   font-size: 0;
 }
@@ -519,7 +522,7 @@ th[class*="-sort"] a::before {
 
 /* High Resolution Image back link */
 a.back-results::before,
-#digital-serial-page-page-viewer-form > a::before {
+a.back-link::before {
   font-family: "Glyphicons Halflings";
   content:"\e251";
   color: $text-muted;
