Minor code tidy

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -304,7 +304,7 @@ p {
   transition: all .2s ease-in-out;
 }
 
-/* High resolution Page pager */
+/* High resolution Digital Page pager */
 .pager a.btn {
   margin: auto .5em;
 }
