--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -11,7 +11,7 @@ form .nav-tabs > li.active > a:focus {
 form .nav-tabs > li > a {
     border:none;
 }
-
-form .nav-tabs > li.active > a:focus {
-    outline: none;
+.tab a:focus {
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
