--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -15,3 +15,19 @@ form .nav-tabs > li > a {
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
 }
+.search-form .form-group {
+    margin-bottom: 0;
+    padding-bottom: 15px;
+}
+a#tab-fulltext:before {
+    font-family: "Glyphicons Halflings";
+    content: "\e055";
+    font-size: smaller;
+    padding-right: 5px;
+}
+a#tab-title:before {
+    font-family: "Glyphicons Halflings";
+    content: "\e047";
+    font-size: smaller;
+    padding-right: 5px;
+}
