--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -148,6 +148,9 @@ li.search-field:before {
   padding: .5em 0;
 }
 
+.publication figure {
+  margin-bottom: 1em;
+}
 .publication fieldset {
   margin-bottom: 1em;
 }
