--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -22,12 +22,12 @@ form .nav-tabs > li > a {
 a#tab-fulltext:before {
     font-family: "Glyphicons Halflings";
     content: "\e055";
-    font-size: smaller;
+    font-size: small;
     padding-right: 5px;
 }
 a#tab-title:before {
     font-family: "Glyphicons Halflings";
     content: "\e047";
-    font-size: smaller;
-    padding-right: 5px;
+    font-size: small;
+    padding-right: 4px;
 }
