NBNP-131 Apply styles to date slider facet widget

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -204,8 +204,14 @@ select[multiple="multiple"] + .form-control {
   font-size: 18px;
   padding: 5px;
 }
-.block-facets h3:first-child {
+.block-facets h3 {
   margin-top: .25em;
+}
+.facet-slider {
+  margin: 3em 1em 0 1em;
+}
+.block-facet--range-slider {
+  padding-bottom: 1.35em;
 }
 .facets-widget-checkbox ul {
   padding-left: .5em;
