NBNP-88 Correct label text

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -263,7 +263,7 @@
                 <div role="tablist" aria-multiselectable="true">
                     <div class="panel-title" role="tab" id="headingMicrofilm">
                         <a role="button" data-toggle="collapse" href="#collapseMicrofilm" aria-expanded="false" aria-controls="collapseMicrofilm" class="collapsed">
-                            {% trans %}Microforms{% endtrans %}
+                            {% trans %}Microfilms{% endtrans %}
                         </a>
                     </div>
                     <div id="collapseMicrofilm" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingMicrofilm">
