--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -262,11 +262,11 @@
             {% if holding.microfilm|length > 0 %}
                 <div role="tablist" aria-multiselectable="true">
                     <div class="panel-title" role="tab" id="headingMicrofilm">
-                        <a role="button" data-toggle="collapse" href="#collapseMicrofilm" aria-expanded="false" aria-controls="collapseMicrofilm" class="collapsed">
+                        <a role="button" data-toggle="collapse" href="#collapseMicrofilm" aria-expanded="true" aria-controls="collapseMicrofilm">
                             {% trans %}Microfilms{% endtrans %}
                         </a>
                     </div>
-                    <div id="collapseMicrofilm" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingMicrofilm">
+                    <div id="collapseMicrofilm" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingMicrofilm">
                         <div class="panel-body">
                             {% for item in holding.microfilm %}
                                 {% if item.value %}
