--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -256,7 +256,7 @@
         <img class="no-borders" src="/{{ active_theme_path() }}/src/img/sample-publication.jpg" alt="" />
     </figure>
 {% endif %}
-    {% if holding.microfilm|length > 0 %}
+    {% if holding|length > 0 %}
         <fieldset>
             <legend>{% trans %}UNB Libraries' Holdings{% endtrans %}:</legend>
             {% if holding.microfilm|length > 0 %}
@@ -269,12 +269,16 @@
                     <div id="collapseMicrofilm" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingMicrofilm">
                         <div class="panel-body">
                             {% for item in holding.microfilm %}
-                                {% if item.value %}
+                                <div class="holding-details">
                                     <dl>
-                                        <dt>{{ item.label }}:</dt>
-                                        <dd>{{ item.value }}</dd>
+                                        {% for field in item %}
+                                            {% if field.value %}
+                                                <dt>{{ field.label }}:</dt>
+                                                <dd>{{ field.value }}</dd>
+                                            {% endif %}
+                                        {% endfor %}
                                     </dl>
-                                {% endif %}
+                                </div>
                             {% endfor %}
                         </div>
                     </div>
