--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -259,6 +259,32 @@
     {% if holding|length > 0 %}
         <fieldset>
             <legend>{% trans %}UNB Libraries' Holdings{% endtrans %}:</legend>
+
+            {% if holding.local_digital|length > 0 %}
+            <div role="tablist" aria-multiselectable="true">
+                <div class="panel-title" role="tab" id="headingDigital">
+                    <a role="button" data-toggle="collapse" href="#collapseDigitial" aria-expanded="true" aria-controls="collapseDigitial">
+                        {% trans %}Digital Versions{% endtrans %}
+                    </a>
+                </div>
+                <div id="collapseDigitial" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingDigital">
+                    <div class="panel-body">
+                        {% for item in holding.local_digital %}
+                            <div class="holding-details">
+                                <dl>
+                                    {% for field in item %}
+                                        {% if field.value %}
+                                            <dt>{{ field.label }}:</dt>
+                                            <dd>{{ field.value }}</dd>
+                                        {% endif %}
+                                    {% endfor %}
+                                </dl>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
+
             {% if holding.microfilm|length > 0 %}
                 <div role="tablist" aria-multiselectable="true">
                     <div class="panel-title" role="tab" id="headingMicrofilm">
