--- a/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
@@ -1,1 +1,5 @@
-<!-- Add you custom twig html here -->
+<!-- Digital Serial Title Issues template -->
+{% set url = url('<current>') %}
+{% set context_id = url['#markup']|split('/')|last %}
+
+{{ drupal_view('digital_issue_list','view_title_issues_block', context_id) }}
