--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -11,6 +11,9 @@ form .nav-tabs > li.active > a:focus {
 form .nav-tabs > li > a {
     border:none;
 }
+.alert {
+    margin-top: inherit!important; /* unb-lib.css override */
+}
 .tab-content {
     padding: 5em 4em!important; /* unb-lib.css override */
 }
@@ -34,7 +37,8 @@ a#tab-title:before {
     font-size: small;
     padding-right: 4px;
 }
-.tab-pane > div {
+.tab-pane div.form-item,
+.tab-pane div.description {
     width: 75%;
     float:left;
 }
@@ -43,9 +47,9 @@ a#tab-title:before {
     border-top-right-radius: 0;
     height: 34px!important; /* unb-lib.css override */
 }
-.tab-pane > div + span {
+.tab-pane div.form-type-textfield + span {
     width: 25%;
 }
-.tab-pane > div + span button {
+.tab-pane div.form-type-textfield + span button {
     margin-top: 27px;
 }
