NBNP-96 Switch html comment to twig comment to remove from source

--- a/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_title/templates/digital-serial-title.html.twig
@@ -1,2 +1,2 @@
-<!-- Digital Serial Title Issues template -->
+{# Digital Serial Title Issues template: embedded digital_issue_list view #}
 {{ drupal_view('digital_issue_list','view_title_issues_block', digital_serial_title_id) }}
